feat(GHA): many a fix

--- a/.github/workflows/sh-checker.yml
+++ b/.github/workflows/sh-checker.yml
@@ -1,8 +1,7 @@
 ---
 name: "Shell script checker"
 on:
-  # - pull_request
-  - push
+  - pull_request
 jobs:
   sh-checker:
     runs-on: ubuntu-latest
